# CMakeList.txt : CMake project for Dead By Daylight Character Information, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Dead By Daylight Character Information.cpp" "Dead By Daylight Character Information.h")

# TODO: Add tests and install targets if needed.
